sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: '<-' expected but '=' found.
    for (k = 0 to getNombreValeur() -2 ){
           ^AlgBubbleSort1:16: error: illegal start of simple expression
  }
  ^