sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var fini = False
  var echange = False
  while (!fini){
    echange = False
    for (k = 0 to getNombreValeur() -2 ){
      if (getValeur(k) > getValeur(k+1)){
        echange(k, k+1);
        echanges = True;
      }
    }
    if (echanges == 0){
      fini = True;
    }
  }
}